# proto2and3-playground

./: Cargo.toml  README.md  build.rs
src/: example2.proto  example3.proto  example3optional.proto  main.rs
