[package]
name = "proto2and3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11.1"
bytes = "1.2.1"

[build-dependencies]
prost-build = { version = "0.11.1"}